[gd_scene load_steps=6 format=3 uid="uid://cmdir5y805d2x"]

[ext_resource type="Script" path="res://AvatarNameCollision.gd" id="3_mm0eh"]
[ext_resource type="Script" path="res://Avatar.gd" id="13_2chrl"]
[ext_resource type="Theme" uid="uid://do2ejls6cuihn" path="res://NekoTheme.tres" id="27_7m6rv"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vnxul"]
size = Vector2(92, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_ro7uc"]

[node name="Avatar" type="Sprite2D"]
texture_filter = 1
script = ExtResource("13_2chrl")

[node name="NameTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="SuicideTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="FightTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]

[node name="Name" type="Label" parent="."]
texture_filter = 1
offset_left = -46.0
offset_top = -29.0
offset_right = 46.0
offset_bottom = -17.0
size_flags_horizontal = 3
size_flags_vertical = 1
theme = ExtResource("27_7m6rv")
text = "MajenkoTech"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Area2D" type="Area2D" parent="Name"]
script = ExtResource("3_mm0eh")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Name/Area2D"]
position = Vector2(46, 6)
shape = SubResource("RectangleShape2D_vnxul")

[node name="Neko" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ro7uc")

[node name="HP" type="ProgressBar" parent="."]
visible = false
offset_left = -15.0
offset_top = 16.0
offset_right = 15.0
offset_bottom = 19.0
theme = ExtResource("27_7m6rv")
max_value = 10.0
step = 1.0
value = 10.0
rounded = true
show_percentage = false

[connection signal="timeout" from="NameTimer" to="." method="_on_name_timer_timeout"]
[connection signal="timeout" from="SuicideTimer" to="." method="_on_suicide_timer_timeout"]
[connection signal="timeout" from="FightTimer" to="." method="_on_fight_timer_timeout"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="area_entered" from="Name/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Name/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="animation_finished" from="Neko" to="." method="_on_neko_animation_finished"]
